fix: fixed horizontal scroll caused by mobile menu header

--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -182,8 +182,21 @@
   }
 }
 
-.mobileMenu {
+.mobileMenuWrapper {
+  z-index: 2;
   position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  pointer-events: none;
+
+  overflow: hidden;
+}
+
+.mobileMenu {
+  pointer-events: all;
+  position: absolute;
   top: 0;
   right: -100%;
   max-width: 22rem;
@@ -195,7 +208,6 @@
   flex-direction: column;
   gap: 1rem;
   transition: right 0.3s ease;
-  z-index: 2;
 
   &.mobileMenuOpen {
     right: 0;
@@ -222,6 +234,7 @@
   content: '';
   position: fixed;
   inset: 0;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(2px);
   z-index: 1;
